add animations to timeline

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ baseurl:
 
 # Site Settings
 title: Silvia Mandalà
-author: Silvia
+author: Silvia Mandalà
 description: "Personal site"
 keywords: "jekyll, coding"
 google-tracking-id:
