Minor fixes - starting to create sass variables

--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@ url: http://simad.github.io
 baseurl:
 
 # Site Settings
-title: Silvia Mandalà
-author: Silvia Mandalà
+title: Silvia's Lair
+author: Silvia
 description: "Personal site"
 keywords: "jekyll, coding"
 google-tracking-id:
