--- a/package.json
+++ b/package.json
@@ -6,12 +6,11 @@
     "clean": "rm -rf _site",
     "hasher": "node csshash.js",
     "start": "npm-run-all clean hasher --parallel dev:*",
-    "dev:postcss": "TAILWIND_MODE=watch postcss src/assets/css/index.css -o _site/css/index.css --config ./postcss.config.js -w",
     "dev:eleventy": "ELEVENTY_ENV=development npx @11ty/eleventy --serve --quiet",
     "dev:bsync": "browser-sync start --server ./_site -w --no-open --no-notify --no-ghost-mode",
     "build": "NODE_ENV=production npm-run-all clean hasher --parallel prod:*",
-    "prod:postcss": "postcss src/assets/css/index.css -o _site/css/$(cat csshash) --config ./postcss.config.js",
-    "prod:eleventy": "ELEVENTY_ENV=production npx @11ty/eleventy --output=./_site"
+    "prod:eleventy": "ELEVENTY_ENV=production npx @11ty/eleventy --output=./_site",
+    "build-ghpages": "npx @11ty/eleventy --pathprefix=/simad.github.io/"
   },
   "keywords": [],
   "author": "",
@@ -24,26 +23,29 @@
   "devDependencies": {
     "@11ty/eleventy": "^3.1.2",
     "@11ty/eleventy-img": "^6.0.4",
-    "autoprefixer": "^10.2.6",
-    "eleventy-plugin-error-overlay": "^1.0.0",
+    "autoprefixer": "^10.4.21",
     "eleventy-plugin-svg-contents": "^0.7.0",
-    "glob": "^7.1.7",
-    "glob-all": "^3.2.1",
-    "luxon": "^1.27.0",
-    "markdown-it": "^12.0.6",
+    "glob": "^11.0.3",
+    "glob-all": "^3.3.1",
+    "html-minifier-next": "^1.2.1",
+    "luxon": "^3.7.1",
+    "markdown-it": "^14.1.0",
     "markdown-it-bracketed-spans": "^1.0.1",
-    "markdown-it-footnote": "^3.0.3",
-    "markdown-it-link-attributes": "^3.0.0",
-    "markdown-it-prism": "^2.1.7",
+    "markdown-it-footnote": "^4.0.0",
+    "markdown-it-link-attributes": "^4.0.1",
+    "markdown-it-prism": "^3.0.0",
     "md5": "^2.3.0",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.3.5",
-    "postcss-cli": "^8.3.1",
-    "postcss-csso": "^5.0.1",
-    "postcss-import": "^14.0.2",
-    "postcss-nesting": "^8.0.1",
-    "rimraf": "^3.0.2",
-    "tailwindcss": "^2.2.4",
+    "postcss": "^8.5.6",
+    "postcss-cli": "^11.0.1",
+    "postcss-csso": "^6.0.1",
+    "postcss-import": "^16.1.1",
+    "postcss-nesting": "^13.0.2",
+    "rimraf": "^6.0.1",
+    "tailwindcss": "^4.1.12",
     "tailwindcss-text-fill-stroke": "^2.0.0-beta.3"
+  },
+  "dependencies": {
+    "browser-sync": "^3.0.4"
   }
 }
